--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "bot.js",
   "dependencies": {
-    "discord.js": "^14.15.0"
+    "discord.js": "^14.15.0",
+    "youtube-screenshot": "^1.0.2",
+    "youtube-notification-module": "^1.1.0",
+    "usetube": "^2.2.7",
+    "youtubei.js": "^9.4.0",
+    "ytdl-getinfo": "^1.1.0"
   },
   "scripts": {
     "start": "node bot.js"
